fixed text clipping issue in chromium based browsers

--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,9 @@ td {
     /*background: -webkit-linear-gradient(left, orange, yellow, cyan);*/
     /*background: -o-linear-gradient(right, orange, yellow, cyan);*/
     /*background: linear-gradient(to right, orange, yellow, cyan);*/
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -o-background-clip: text;
     background-clip: text;
 }
 
